--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -1,73 +1,24 @@
-name: 🎯 Allure Report
-
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:  # Позволяет запускать вручную
-
+name: Allure Report
+on: [push]
 jobs:
-  test-and-report:
+  test:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: 📥 Checkout code
-      uses: actions/checkout@v3
-      
-    - name: 🐍 Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-        
-    - name: 📦 Install dependencies
-      run: |
-        pip install requests pytest allure-pytest
-        
-    - name: 🧪 Create and run simple API tests
-      run: |
-        # Создаем простые тесты
-        mkdir -p tests
-        cat > tests/test_simple.py << 'EOF'
-        import requests
-        import allure
-        import pytest
-        
-        BASE_URL = "https://petstore.swagger.io/v2"
-        
-        class TestPetStore:
-            @allure.title("Check PetStore API is available")
-            def test_api_availability(self):
-                response = requests.get(f"{BASE_URL}/pet/findByStatus?status=available")
-                assert response.status_code == 200
-                print("✅ API is available")
-                
-            @allure.title("Add new pet to store")
-            def test_add_pet(self):
-                pet_data = {
-                    "id": 999,
-                    "category": {"id": 1, "name": "dogs"},
-                    "name": "TestDog",
-                    "photoUrls": ["string"],
-                    "tags": [{"id": 1, "name": "friendly"}],
-                    "status": "available"
-                }
-                response = requests.post(f"{BASE_URL}/pet", json=pet_data)
-                assert response.status_code == 200
-                print("✅ Pet added successfully")
-                
-            @allure.title("Get pet by ID")
-            def test_get_pet(self):
-                response = requests.get(f"{BASE_URL}/pet/999")
-                # Может быть 404 если питомца нет, но это нормально для теста
-                assert response.status_code in [200, 404]
-                print("✅ Get pet test completed")
-        EOF
-        
-        # Запускаем тесты с Allure
-        pytest tests/ --alluredir=allure-results -v
-        
-    - name: 📊 Publish Allure Report
-      uses: simple-elf/allure-report-action@master
-      with:
-        allure_results: allure-results
-        allure_report: allure-report
-        keep_reports: 5
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with: 
+          python-version: '3.9'
+      - run: pip install requests pytest allure-pytest
+      - run: |
+          mkdir -p tests
+          cat > tests/test_simple.py << 'EOF'
+          import requests
+          def test_api():
+              r = requests.get('https://petstore.swagger.io/v2/pet/findByStatus?status=available')
+              assert r.status_code == 200
+          EOF
+          pytest tests/ --alluredir=allure-results
+      - uses: simple-elf/allure-report-action@master
+        with:
+          allure_results: allure-results
+          allure_report: allure-report
