--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -1,4 +1,4 @@
-name: 🎯 Allure Report
+name: 🚀 Allure Report
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     
     steps:
     - name: 📥 Checkout code
@@ -20,57 +21,154 @@ jobs:
         
     - name: 📦 Install dependencies
       run: |
-        pip install requests pytest allure-pytest
+        python -m pip install --upgrade pip
+        pip install requests==2.31.0
+        pip install pytest==7.4.0
+        pip install allure-pytest==2.13.2
+        pip install pytest-html==4.1.1
+        pip install pytest-xdist==3.3.1
         
-    - name: 🧪 Create test file
+    - name: 🧪 Create complete test suite
       run: |
         mkdir -p tests
-        cat > tests/test_petstore.py << 'EOF'
+        
+        cat > tests/__init__.py << 'EOF'
+        # Test package
+        EOF
+        
+        cat > tests/conftest.py << 'EOF'
+        import pytest
+        import requests
+        from datetime import datetime
+        
+        @pytest.fixture
+        def base_url():
+            return "https://petstore.swagger.io/v2"
+            
+        @pytest.fixture
+        def session():
+            return requests.Session()
+        EOF
+        
+        cat > tests/test_pet_api.py << 'EOF'
         import requests
         import allure
         import pytest
+        import json
+        from datetime import datetime
         
         BASE_URL = "https://petstore.swagger.io/v2"
         
-        class TestPetStore:
-            @allure.title("Check PetStore API is working")
-            @allure.severity(allure.severity_level.BLOCKER)
-            def test_api_availability(self):
-                with allure.step("Send GET request to API"):
-                    response = requests.get(f"{BASE_URL}/pet/findByStatus?status=available")
-                
-                with allure.step("Check response status"):
-                    assert response.status_code == 200
-                    allure.attach(f"Status Code: {response.status_code}", name="Response Info", attachment_type=allure.attachment_type.TEXT)
+        @allure.epic("PetStore API")
+        @allure.feature("Pet Management")
+        class TestPetAPI:
             
-            @allure.title("Add new pet to store")
-            @allure.severity(allure.severity_level.CRITICAL)  
-            def test_add_pet(self):
-                pet_data = {
-                    "id": 999,
-                    "name": "AllureTestDog",
+            @pytest.fixture
+            def pet_data(self):
+                return {
+                    "id": int(datetime.now().timestamp()),
+                    "category": {"id": 1, "name": "Dogs"},
+                    "name": "TestDog",
+                    "photoUrls": ["https://example.com/photo.jpg"],
+                    "tags": [{"id": 1, "name": "friendly"}],
                     "status": "available"
                 }
+            
+            @allure.title("Add new pet to the store")
+            @allure.severity(allure.severity_level.BLOCKER)
+            def test_add_new_pet(self, pet_data):
+                with allure.step("Prepare request data"):
+                    allure.attach(json.dumps(pet_data, indent=2), name="Request Body", attachment_type=allure.attachment_type.JSON)
                 
-                with allure.step("Prepare pet data"):
-                    allure.attach(str(pet_data), name="Pet Data", attachment_type=allure.attachment_type.JSON)
-                
-                with allure.step("Send POST request to add pet"):
+                with allure.step("Send POST request to /pet"):
+                    start_time = datetime.now()
                     response = requests.post(f"{BASE_URL}/pet", json=pet_data)
+                    response_time = (datetime.now() - start_time).total_seconds()
+                    
+                with allure.step("Verify response"):
+                    assert response.status_code == 200, f"Expected 200, got {response.status_code}"
+                    response_json = response.json()
+                    allure.attach(json.dumps(response_json, indent=2), name="Response Body", attachment_type=allure.attachment_type.JSON)
+                    allure.attach(f"Response time: {response_time:.2f}s", name="Performance", attachment_type=allure.attachment_type.TEXT)
+                    
+                    assert response_json["id"] == pet_data["id"]
+                    assert response_json["name"] == pet_data["name"]
+                    assert response_json["status"] == pet_data["status"]
+            
+            @allure.title("Find pet by ID")
+            @allure.severity(allure.severity_level.CRITICAL)
+            def test_find_pet_by_id(self, pet_data):
+                # First create a pet
+                create_response = requests.post(f"{BASE_URL}/pet", json=pet_data)
+                pet_id = pet_data["id"]
                 
-                with allure.step("Verify pet was added"):
+                with allure.step(f"Search for pet with ID {pet_id}"):
+                    response = requests.get(f"{BASE_URL}/pet/{pet_id}")
+                    
+                with allure.step("Verify pet found"):
+                    if response.status_code == 200:
+                        pet_info = response.json()
+                        allure.attach(f"Found pet: {pet_info['name']} (ID: {pet_info['id']})", name="Pet Info", attachment_type=allure.attachment_type.TEXT)
+                        assert pet_info["id"] == pet_id
+                    # 404 is also acceptable if pet was deleted
+            EOF
+        
+        cat > tests/test_store_api.py << 'EOF'
+        import requests
+        import allure
+        import json
+        
+        BASE_URL = "https://petstore.swagger.io/v2"
+        
+        @allure.epic("PetStore API")
+        @allure.feature("Store Management")
+        class TestStoreAPI:
+            
+            @allure.title("Get store inventory")
+            @allure.severity(allure.severity_level.NORMAL)
+            def test_get_inventory(self):
+                with allure.step("Request inventory data"):
+                    response = requests.get(f"{BASE_URL}/store/inventory")
+                    
+                with allure.step("Verify inventory response"):
                     assert response.status_code == 200
-                    assert response.json()["name"] == "AllureTestDog"
-                    allure.attach(str(response.json()), name="Response Data", attachment_type=allure.attachment_type.JSON)
+                    inventory = response.json()
+                    allure.attach(json.dumps(inventory, indent=2), name="Inventory", attachment_type=allure.attachment_type.JSON)
+                    assert isinstance(inventory, dict)
+        EOF
+        
+        cat > tests/test_user_api.py << 'EOF'
+        import requests
+        import allure
+        import json
+        
+        BASE_URL = "https://petstore.swagger.io/v2"
+        
+        @allure.epic("PetStore API") 
+        @allure.feature("User Management")
+        class TestUserAPI:
+            
+            @allure.title("Check user login functionality")
+            def test_user_login(self):
+                with allure.step("Attempt user login"):
+                    response = requests.get(f"{BASE_URL}/user/login?username=test&password=test")
+                    # Can return 200 or 400 depending on user existence
+                    assert response.status_code in [200, 400]
         EOF
         
     - name: 🧪 Run tests with Allure
       run: |
-        pytest tests/ --alluredir=allure-results -v
+        echo "=== Running PetStore API Tests ==="
+        pytest tests/ -v --alluredir=allure-results --junitxml=junit-results.xml
         
-    - name: 📊 Publish Allure Report
-      uses: simple-elf/allure-report-action@master
+    - name: 📊 Generate Allure report
+      run: |
+        echo "=== Generating Allure Report ==="
+        allure generate allure-results --clean -o allure-report
+        
+    - name: 🚀 Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        allure_results: allure-results
-        allure_report: allure-report
-        keep_reports: 10
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./allure-report
+        force_orphan: true
