--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -7,34 +7,50 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-        
-    - name: Install dependencies
-      run: pip install requests pytest allure-pytest
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Create test file
-      run: |
-        mkdir -p tests
-        echo 'import requests' > tests/test_api.py
-        echo 'import allure' >> tests/test_api.py
-        echo '' >> tests/test_api.py
-        echo '@allure.title("PetStore API Test")' >> tests/test_api.py
-        echo 'def test_petstore_api():' >> tests/test_api.py
-        echo '    response = requests.get("https://petstore.swagger.io/v2/pet/findByStatus?status=available")' >> tests/test_api.py
-        echo '    assert response.status_code == 200' >> tests/test_api.py
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    - name: Run tests with Allure
-      run: pytest tests/ --alluredir=allure-results -v
+      - name: Install dependencies
+        run: pip install requests pytest allure-pytest
 
-    - name: Deploy Allure Report
-      uses: simple-elf/allure-report-action@v1.7
-      with:
-        allure_results: allure-results
+      - name: Create test file
+        run: |
+          mkdir -p tests
+          cat > tests/test_api.py << 'EOF'
+import requests
+import allure
+
+@allure.title("PetStore API Test")
+def test_petstore_api():
+    response = requests.get("https://petstore.swagger.io/v2/pet/findByStatus?status=available")
+    assert response.status_code == 200
+EOF
+
+      - name: Run tests with Allure
+        run: pytest tests/ --alluredir=allure-results -v
+
+      - name: Generate Allure Report
+        run: |
+          # Установка Allure CLI (через SDKMAN или напрямую)
+          wget https://repo1.maven.org/maven2/io/qameta/allure/allure-commandline/2.26.0/allure-commandline-2.26.0.zip
+          unzip allure-commandline-2.26.0.zip -d allure
+          export PATH=$PATH:$(pwd)/allure/allure-2.26.0/bin
+          allure generate allure-results -o allure-report --clean
+
+      - name: Deploy to GitHub Pages
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git checkout -b gh-pages || git checkout gh-pages
+          rm -rf ./*
+          cp -r allure-report/* .
+          git add .
+          git commit -m "Update Allure report" || echo "No changes to commit"
+          git push origin gh-pages
